@@ -1,3 +1,8 @@
+2007-03-01  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php:
+	Mark some strings as localizable.
+
 2007-02-25  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php:
